<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/TheSecondDawnImageView2"
        android:layout_width="126dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/imageView2"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/TheSecondDawnTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:text="@string/textView3"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TheSecondDawnTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/textView4"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:hint="@string/editText1"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TheSecondDawnEditText1"
            android:layout_width="375dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/edittext_shape"
            android:fontFamily="sans-serif-black"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/editText2"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TheSecondDawnEditText2"
            android:layout_width="375dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/edittext_shape"
            android:fontFamily="sans-serif-black"
            android:inputType="textPassword"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/TheSecondDawnCheckBox"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="-125dp"
        android:layout_marginTop="5dp"
        android:text="@string/checkBox"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TheSecondDawnTextView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="125dp"
        android:layout_marginTop="-35dp"
        android:text="@string/textView6"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/TheSecondDawnButton1"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_shape"
        android:text="@string/button1"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/TheSecondDawnImageView29"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/imageView29"
        app:srcCompat="@drawable/google_button" />

    <TextView
        android:id="@+id/TheSecondDawnTextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/textView5"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/TheSecondDawnProgressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="-350dp"
        android:visibility="gone" />

</LinearLayout>