<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageButton
        android:id="@+id/TheSecondDawnImageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:contentDescription="@string/imageButton1"
        android:src="@drawable/ic_left_arrow_state" />

    <ImageView
        android:id="@+id/TheSecondDawnImageView3"
        android:layout_width="126dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="-20dp"
        android:contentDescription="@string/imageView3"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/TheSecondDawnTextView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:text="@string/textView7"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TheSecondDawnTextView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/textView8"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:hint="@string/editText11"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/ic_profile"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TheSecondDawnEditText11"
            android:layout_width="375dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/edittext_shape"
            android:fontFamily="sans-serif-black"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/editText3"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TheSecondDawnEditText3"
            android:layout_width="375dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/edittext_shape"
            android:fontFamily="sans-serif-black"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/editText4"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TheSecondDawnEditText4"
            android:layout_width="375dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/edittext_shape"
            android:fontFamily="sans-serif-black"
            android:inputType="textPassword"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/editText5"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TheSecondDawnEditText5"
            android:layout_width="375dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/edittext_shape"
            android:fontFamily="sans-serif-black"
            android:inputType="textPassword"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/editText12"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:hintTextColor="@color/white"
        app:startIconDrawable="@drawable/ic_phone"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TheSecondDawnEditText12"
            android:layout_width="375dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/edittext_shape"
            android:fontFamily="sans-serif-black"
            android:inputType="phone"
            android:maxLength="10"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/TheSecondDawnButton2"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_shape"
        android:text="@string/button2"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/TheSecondDawnProgressBar2"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="-200dp"
        android:visibility="gone" />
</LinearLayout>